--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "restart": "pm2 restart DARK-KNIGHT-XMD"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@rexxhayanasi/elaina-baileys",
+    "@whiskeysockets/baileys": "^6.7.21",
     "@adiwajshing/keyed-db": "latest",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
